# VandervurdCPPTemplates

./: .gitignore  CMakeLists.txt  main.cpp
basics/: maxtypesamples.cpp  maxtypesamples.h
chapter1/: chapter1.cpp  chapter1.h
chapter2/: chapter2.cpp  chapter2.h  stack_specialization.cpp
moving/: moving.cpp  moving.h
